--- a/app/globals.css
+++ b/app/globals.css
@@ -49,3 +49,12 @@ body {
 .queens-color8 {
   background-color: #b6b6a3;
 }
+.queens-color9 {
+  background-color: #e9a7c0;
+}
+.queens-color10 {
+  background-color: #a9dadd;
+}
+.queens-color11 {
+  background-color: #59f4ec;
+}
